# multi-chat-demo

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  README_SETUP.md  TESTING.md  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: coverage.yml
backend/: main.py  settings.py  urls.py
backend/chat/: admin.py  api.py  auth_api.py  chatbot.py  models.py  test_admin.py  test_api.py  test_auth_api.py  test_chatbot.py  test_models.py  tests.py
backend/chat/migrations/: 0001_initial.py  0002_conversation_model.py  0004_fix_model_ids.py  0005_add_user_profile.py  (+1 more)
backend/config/: settings.py  urls.py  wsgi.py
backend/tests/: conftest.py  test_admin.py  test_api.py  test_auth_api.py  test_chatbot.py  test_models.py
chat/: api.py  chatbot.py  models.py  schemas.py
chat/migrations/: 0003_remove_conversation_model_and_more.py
docs/: .gitkeep  README.md  _config.yml  demo-slideshow.html  demo.html  faq.md  index.md  quick-start.md  screenshot-capture.md  summary.md  tech-slideshow.html
docs/makedocs/: capture-screenshots.js  create-placeholders.html  screenshot-guide.md
docs/screenshots/: README.md
frontend/: .env.local.example  daisyui.d.ts  jest.config.js  jest.setup.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts  test-daisyui.html
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AuthPage.tsx  ChatWindow.tsx  ConversationList.tsx  MessageInput.tsx  ThemeProvider.tsx
frontend/lib/: api.ts  types.ts
scripts/: check-migrations.sh
(+4 files in other folders)
