[project]
name = "multi-chat-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.75.0",
    "django>=5.2.8",
    "django-cors-headers>=4.9.0",
    "django-ninja>=1.5.0",
    "django-stubs>=5.2.8",
    "httpx>=0.27.0",
    "pillow>=11.0.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "ruff>=0.14.7",
]
